# eat-agent

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
agent/: agent_executor.py  prompt.py  tools.py
core/: __init__.py  graph_rag.py  memory.py  workflow.py
core/skills/calorie_query/: skill.py
core/skills/meal_planner/: skill.py
data/documents/: food_calories.txt  meal_combinations..txt  nutrition_info.txt
data/memory/: meta.json
data/memory/long_term/: index.faiss
data/vector_store/: index.faiss
front/: app.py
front/static/: script.js  style.css
front/templates/: index.html
mcp_servers/: local_server.py
rag/: embeddings.py  retriever.py  vector_store.py
utils/: callbacks.py  llm.py  performance.py
